zoc/src/typecheck/snapshots/zoc__typecheck__tests__eq_transitive.snap
---
source: zoc/src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Type0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            ind
            Type0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            ind
            Type0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            (
                ind
                Type0
                "Eq"
                (
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        (
                            (
                                ind
                                Type0
                                "Bool"
                                ()
                                (
                                    (
                                        ()
                                        ()
                                    )
                                    (
                                        ()
                                        ()
                                    )
                                )
                            )
                        )
                        (
                            0
                            0
                        )
                    )
                )
            )
            2
            1
        )
        (
            (
                ind
                Type0
                "Eq"
                (
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        (
                            (
                                ind
                                Type0
                                "Bool"
                                ()
                                (
                                    (
                                        ()
                                        ()
                                    )
                                    (
                                        ()
                                        ()
                                    )
                                )
                            )
                        )
                        (
                            0
                            0
                        )
                    )
                )
            )
            2
            1
        )
    )
    (
        (
            ind
            Type0
            "Eq"
            (
                (
                    ind
                    Type0
                    "Bool"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                (
                    ind
                    Type0
                    "Bool"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
            )
            (
                (
                    (
                        (
                            ind
                            Type0
                            "Bool"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    ()
                                    ()
                                )
                            )
                        )
                    )
                    (
                        0
                        0
                    )
                )
            )
        )
        4
        2
    )
)
