zoc/src/typecheck/snapshots/zoc__typecheck__tests__eq_zero_one.snap
---
source: zoc/src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            (
                ind
                Type0
                "Eq0"
                (
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        ()
                        (
                            (
                                vcon
                                (
                                    ind
                                    Type0
                                    "Nat"
                                    ()
                                    (
                                        (
                                            ()
                                            ()
                                        )
                                        (
                                            (
                                                0
                                            )
                                            ()
                                        )
                                    )
                                )
                                0
                            )
                        )
                    )
                )
            )
            (
                (
                    vcon
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    1
                )
                (
                    vcon
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    0
                )
            )
        )
    )
    (
        ind
        Type0
        "False"
        ()
        ()
    )
)
