zoc/src/typecheck/snapshots/zoc__typecheck__tests__ex_falso.snap
---
source: zoc/src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Type0
            "False"
            ()
            ()
        )
    )
    (
        ind
        Type0
        "Nat"
        ()
        (
            (
                ()
                ()
            )
            (
                (
                    0
                )
                ()
            )
        )
    )
)
