zoc/src/typecheck/snapshots/zoc__typecheck__tests__polymorphic_rev_1_2_3.snap
---
source: zoc/src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    ind
    Type0
    "List"
    ()
    (
        (
            ()
            ()
        )
        (
            (
                (
                    ind
                    Type0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
                1
            )
            ()
        )
    )
)
