zoc/src/typecheck/snapshots/zoc__typecheck__tests__vcon_index_arg_types_are_compared_against_ind_index_types_substituted_with_vcon_index_args.snap
---
source: zoc/src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        Type0
        0
    )
    Type1
)
